change control color; zoom

--- a/Sandbox/Sandbox/Views/Home/Brood.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Brood.cshtml
@@ -25,20 +25,28 @@
                             </div>
                         </div>
                     </article>
-
                 </div>
-
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Brood-silver, resin" title="Brood-silver, resin" class="img-responsive custom-overlay-6" src="images/brood/brood-01.jpg" />
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6 zoom">
+                        <a>
+                            <img alt="Natalie Macellaio - Brood-silver, resin" title="Brood-silver, resin" class="img-responsive custom-overlay-6" src="images/brood/brood-01.jpg" />
+                            <div class="showcase-thumb-strip-inner valign">
+                                <h3 class="black">Resin and Metal</h3>
+                                <p class="white"><span class="black-bg">Brood</span></p>
+                            </div>
+                        </a>
                     </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Brood-silver, resin" title="Brood-silver, resin - detail" class="img-responsive custom-overlay-6" src="images/brood/brood-02.jpg" />
+                    <article class="col-md-6 zoom">
+                        <a>
+                            <img alt="Natalie Macellaio - Brood-silver, resin" title="Brood-silver, resin - detail" class="img-responsive custom-overlay-6" src="images/brood/brood-02.jpg" />
+                        </a> 
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Brood-silver, resin" title="Brood-silver, resin -detail2" class="img-responsive custom-overlay-6" src="images/brood/brood-03.jpg" />
+                <div class="row showcase-thumb-strip ">            
+                    <article class="col-md-6 zoom">
+                        <a>
+                            <img alt="Natalie Macellaio - Brood-silver, resin" title="Brood-silver, resin -detail2" class="img-responsive custom-overlay-6" src="images/brood/brood-03.jpg" />
+                        </a>
                     </article>
                     </div>
             </article>
