--- a/Sandbox/Sandbox/Views/Shared/_InternalPageLayout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_InternalPageLayout.cshtml
@@ -4,7 +4,7 @@
     <title>@ViewBag.Title</title>
     <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="~/fonts/fonts.css" rel="stylesheet">
-    <!--<link href="~/stylesheets/pace.preload.css" rel="stylesheet">-->
+   <link href="~/stylesheets/pace.preload.css" rel="stylesheet">
     <link href="~/stylesheets/slimmenu.css" rel="stylesheet" type="text" />
     <link href="~/stylesheets/venobox.css" rel="stylesheet" type="text" />
     <link href="~/stylesheets/jquery.tweet.css" rel="stylesheet" type="text" />
