--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
         <link href="~/stylesheets/main-retina.css" rel="stylesheet" type="text" />
         <link rel="~/stylesheet/less" type="text/css" href="less/color.less" />
         <link rel="~/stylesheet/less" type="text/css" href="less/fonts.less" />
-        <script src="~/less/less-2.0.0.min.js"></script>
+        <script src="~/less/less-2.0.0.min.js" type="text/javascript"></script>
         <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,900%7COpen+Sans:400,300,700,800%7CMontserrat:400,700%7CCrimson+Text:400,700,400italic,700italic%7CLekton:400,700' rel='stylesheet' type='text/css'>
        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
