edit single-item page

--- a/Sandbox/Sandbox/Views/Home/Brood.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Brood.cshtml
@@ -10,10 +10,10 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">Brood</span></p>
+                                <p class="font5"><span class="color-bg black ">Just a post - with a brood of art</span></p>
                                 <h2 class="black add-top-quarter"><span>Brood</span></h2>
                                 <h5 class="font3 black">2007</h5>
-                                <h4 class="font5 dark">Brood</h4>
+                                <h3 class="font5 color">Resin and Metal</h3>
                             </div>
                         </div>
                     </article>
@@ -26,29 +26,28 @@
                         </div>
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip">
-                    <article class="col-md-6 zoom">
-                        <a>
-                            <img alt="Natalie Macellaio - Brood-silver, resin" title="Brood-silver, resin" class="img-responsive custom-overlay-6" src="images/brood/brood-01.jpg" />
-                            <div class="showcase-thumb-strip-inner valign">
-                                <h3 class="black">Resin and Metal</h3>
-                                <p class="white"><span class="black-bg">Brood</span></p>
-                            </div>
-                        </a>
-                    </article>
-                    <article class="col-md-6 zoom">
-                        <a>
-                            <img alt="Natalie Macellaio - Brood-silver, resin" title="Brood-silver, resin - detail" class="img-responsive custom-overlay-6" src="images/brood/brood-02.jpg" />
-                        </a> 
+                <div class="row ">                  
+                        <article class="col-md-6 showcase-thumb-strip">
+                                <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive" src="images/brood/brood-01.jpg" />
+                                <div class="showcase-thumb-strip-inner">
+                                    <h3 class="black">Brood  silver, resin</h3>
+                                </div>
+                   </article>
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive custom-overlay-6" src="images/brood/brood-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Brood silver, resin, detail</h3>
+                        </div>
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip ">            
-                    <article class="col-md-6 zoom">
-                        <a>
-                            <img alt="Natalie Macellaio - Brood-silver, resin" title="Brood-silver, resin -detail2" class="img-responsive custom-overlay-6" src="images/brood/brood-03.jpg" />
-                        </a>
+                <div class="row showcase-thumb-strip ">
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive custom-overlay-6" src="images/brood/brood-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Brood silver, resin, detail2</h3>
+                        </div>
                     </article>
-                    </div>
+                </div>
             </article>
         </div>
     </div>
