--- a/Sandbox/Sandbox/Views/Home/Bulge.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Bulge.cshtml
@@ -1,7 +1,6 @@
 ﻿@{ Layout = "~/Views/Shared/_InternalPageLayout.cshtml";
     ViewBag.Title = "Natalie Macellaio | Bulge";
 }
-
 <section class="page-section" id="bluge">
     <div class="container">
         <div class="row">
@@ -13,7 +12,7 @@
                                 <p class="font5"><span class="color-bg black ">Bulge</span></p>
                                 <h2 class="black add-top-quarter"><span>bulge</span></h2>
                                 <h5 class="font3 black">2007</h5>
-                                <h4 class="font5 dark">Bulge</h4>
+                                <h4 class="font5 dark">Resin and Metal</h4>
                             </div>
                         </div>
                     </article>
@@ -26,17 +25,26 @@
                         </div>
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip zoom">
+                <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Bulge - copper, resin 12x50x3" title="Bulge-3" class="img-responsive custom-overlay-6" src="images/bulge/bulge-01.jpg" />
+                        <img alt="Natalie Macellaio - Bulge - copper, resin 12x50x3" class="img-responsive custom-overlay-6" src="images/bulge/bulge-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Bulge -copper, resin 12x50x3</h3>
+                        </div>
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Bulge-detail" title="Bulge-detail" class="img-responsive custom-overlay-6" src="images/bulge/bulge-02.jpg" />
+                        <img alt="Natalie Macellaio - Bulge-detail" class="img-responsive custom-overlay-6" src="images/bulge/bulge-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Bulge -detail</h3>
+                        </div>
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip zoom">
+                <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Bulge-crawl" title="Bulge-crawl" class="img-responsive custom-overlay-6" src="images/bulge/bulge-03.jpg" />
+                        <img alt="Natalie Macellaio - Bulge-crawl" class="img-responsive custom-overlay-6" src="images/bulge/bulge-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Bulge -crawl</h3>
+                        </div>
                     </article>
                     </div>
             </article>
