--- a/Sandbox/Sandbox/Views/Home/Bump.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Bump.cshtml
@@ -1,7 +1,6 @@
 ﻿@{ Layout = "~/Views/Shared/_InternalPageLayout.cshtml";
     ViewBag.Title = "Natalie Macellaio | Bump";
 }
-
 <section class="page-section" id="bump">
     <div class="container">
         <div class="row">
@@ -13,7 +12,7 @@
                                 <p class="font5"><span class="color-bg black ">bump</span></p>
                                 <h2 class="black add-top-quarter"><span>bump</span></h2>
                                 <h5 class="font3 black">2005</h5>
-                                <h4 class="font5 dark">Bump</h4>
+                                <h3 class="font5 color">Resin and Metal</h3>
                             </div>
                         </div>
                     </article>
@@ -25,21 +24,30 @@
                             </div>
                         </div>
                     </article>
-
                 </div>
-
-                <div class="row showcase-thumb-strip zoom">
+                <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Bump-4" title="Bump-4" class="img-responsive custom-overlay-6" src="images/bump/bump-01.jpg" />
+                        <img alt="Natalie Macellaio - Bump-4" class="img-responsive" src="images/bump/bump-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Bump-4</h3>
+                        </div>
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Bump-2" title="Bump-2" class="img-responsive custom-overlay-6" src="images/bump/bump-02.jpg" />
+                        <img alt="Natalie Macellaio - Bump-2" class="img-responsive" src="images/bump/bump-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Bump-2</h3>
+                        </div>
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip zoom">
+                <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Bump-side" title="Bump-side" class="img-responsive custom-overlay-6" src="images/bump/bump-03.jpg" />
-                     </article>              
+                        <img alt="Natalie Macellaio - Bump-side" class="img-responsive" src="images/bump/bump-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Bump-side</h3>
+                        </div>
+                     </article>
+                         </div>
+            </article>
         </div>
     </div>
 </section>
