--- a/Sandbox/Sandbox/Views/Home/Scribbles.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Scribbles.cshtml
@@ -13,7 +13,7 @@
                                 <p class="font5"><span class="color-bg black ">Metal Designs from Toddler's Art</span></p>
                                 <h2 class="black add-top-quarter"><span>Scribbles Collection</span></h2>
                                 <h5 class="font3 black">2014</h5>
-                                <h4 class="font5 dark">Toddler Scribbles</h4>
+                                <h3 class="font5 color">new work</h3>
                             </div>
                         </div>
                     </article>
@@ -28,15 +28,24 @@
                 </div>
                 <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Purple Scribble" title="Purple Scribble" class="img-responsive custom-overlay" src="../images/scribbles/scrib-01.jpg" />
+                        <img alt="Natalie Macellaio - Purple Scribble" class="img-responsive custom-overlay" src="../images/scribbles/scrib-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Purple Scribble</h3>
+                        </div>
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Yellow and Blue Scribble" title="Yellow and Blue Scribble" class="img-responsive custom-overlay" src="../images/scribbles/scrib-02.jpg" />
+                        <img alt="Natalie Macellaio - Yellow and Blue Scribble" class="img-responsive custom-overlay" src="../images/scribbles/scrib-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Yellow and Blue Scribble</h3>
+                        </div>
                     </article>
                 </div>
                 <div class="row showcase-thumb-strip zoom">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Blues Scribble" title="Blues Scribble" class="img-responsive custom-overlay" src="../images/scribbles/scrib-03.jpg" />
+                        <img alt="Natalie Macellaio - Blues Scribble" class="img-responsive custom-overlay" src="../images/scribbles/scrib-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Blues Scribble</h3>
+                        </div>
                     </article>
                     <article class="col-md-6">
 
