--- a/Sandbox/Sandbox/Views/Home/KidsRings.cshtml
+++ b/Sandbox/Sandbox/Views/Home/KidsRings.cshtml
@@ -13,7 +13,7 @@
                                 <p class="font5"><span class="color-bg black ">Playful Rings inspiried by Toddlers</span></p>
                                 <h2 class="black add-top-quarter"><span>Kids Rings</span></h2>
                                 <h5 class="font3 black">2014</h5>
-                                <h4 class="font5 dark">Toddler Rings</h4>
+                                <h4 class="font5 dark">New Work</h4>
                             </div>
                         </div>
                     </article>
@@ -25,29 +25,41 @@
                             </div>
                         </div>
                     </article>
-
                 </div>
-
-                <div class="row showcase-thumb-strip zoom">
+                <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring" title="Fina's Ring" class="img-responsive custom-overlay-6 " src="images/kidsrings/kring-01.jpg" />
+                        <img alt="Natalie Macellaio - Fina's Ring" class="img-responsive custom-overlay-6 " src="images/kidsrings/kring-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Fina's Ring</h3>
+                        </div>
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring Detail" title="Fina's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-02.jpg" />
-                    </article>
-                </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring" title="Milo's Ring" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-03.jpg" />
-                    </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring Detail" title="Milo's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-04.jpg" />
+                        <img alt="Natalie Macellaio - Fina's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Fina's Ring, Detail</h3>
+                        </div>
                     </article>
                 </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Milo's Ring" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Milo's Ring</h3>
+                        </div>
+                     </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Milo's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-04.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Milo's Ring, Detail</h3>
+                        </div>
+                    </article>
+                </div>
                 <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-12 col-md-push-1 zoom">
-                        <img alt="Natalie Macellaio - Balloon Ring" title="Balloon Ring" class="img-responsive custom-overlay" src="images/kidsrings/kring-05.jpg" />
-
+                    <article class="col-md-12 col-md-push-1">
+                        <img alt="Natalie Macellaio - Balloon Ring" class="img-responsive custom-overlay" src="images/kidsrings/kring-05.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Balloon Ring</h3>
+                        </div>
                     </article>
                 </div>
             </article>
