--- a/Sandbox/Sandbox/Views/Home/PiercingPieces.cshtml
+++ b/Sandbox/Sandbox/Views/Home/PiercingPieces.cshtml
@@ -13,7 +13,7 @@
                                 <p class="font5"><span class="color-bg black ">Wall sculpture installation by Natalie</span></p>
                                 <h2 class="black add-top-quarter"><span>Piercing Pieces</span></h2>
                                 <h5 class="font3 black">2014</h5>
-                                <h4 class="font5 dark">Piercing Pieces</h4>
+                                <h3 class="font5 dark">New work</h3>
                             </div>
                         </div>
                     </article>
@@ -25,38 +25,55 @@
                             </div>
                         </div>
                     </article>
-
                 </div>
-
-                <div class="row showcase-thumb-strip zoom">
+                <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - a memory 2" title="a memory 2" class="img-responsive custom-overlay-6 " src="~/images/piercing/piercing-01.jpg" />
-                    </article>
+                        <img alt="Natalie Macellaio - a memory 2" class="img-responsive" src="~/images/piercing/piercing-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">a memory 2</h3>
+                        </div>
+                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - a memory 6" title="a memory 6" class="img-responsive custom-overlay-6" src="~/images/piercing/piercing-02.jpg" />
-                    </article>
+                        <img alt="Natalie Macellaio - a memory 6" class="img-responsive" src="~/images/piercing/piercing-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black"> a memory 6</h3>
+                        </div>
+                     </article>
                 </div>
-                <div class="row showcase-thumb-strip zoom">
+                <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - a memory 9" title="a memory 9 " class="img-responsive custom-overlay-6" src="~/images/piercing/piercing-03.jpg" />
-                    </article>
+                        <img alt="Natalie Macellaio - a memory 9" class="img-responsive" src="~/images/piercing/piercing-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">a memory 9</h3>
+                        </div>
+                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - a memory detail" title="a memory detail" class="img-responsive custom-overlay-6" src="~/images/piercing/piercing-04.jpg" />
-                    </article>                  
+                        <img alt="Natalie Macellaio - a memory detail" class="img-responsive" src="~/images/piercing/piercing-04.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">a memory detail</h3>
+                        </div>
+                     </article>                  
                 </div>
-                <div class="row showcase-thumb-strip zoom">
+                <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - a memory detail -1" title="a memory detail 1" class="img-responsive custom-overlay-6" src="~/images/piercing/piercing-05.jpg" />
-                    </article>
+                        <img alt="Natalie Macellaio - a memory detail -1" class="img-responsive custom-overlay-6" src="~/images/piercing/piercing-05.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">a memory detail -1l</h3>
+                        </div>
+                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - a memory detail -2" title="a memory detail 2" class="img-responsive custom-overlay-6" src="~/images/piercing/piercing-06.jpg" />
-                    </article>
+                        <img alt="Natalie Macellaio - a memory detail -2" class="img-responsive" src="~/images/piercing/piercing-06.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">a memory detail -2</h3>
+                        </div>
+                     </article>
                 </div>
-                <div class="row showcase-thumb-strip zoom">
+                <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - a memory full" title="a memory full" class="img-responsive custom-overlay-6" src="~/images/piercing/piercing-07.jpg" />
-                    </article>
-                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - a memory full" class="img-responsive" src="~/images/piercing/piercing-07.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">a memory full</h3>
+                        </div>
                      </article>
                 </div>
             </article>
