--- a/Sandbox/Sandbox/Views/Home/ResinBalls.cshtml
+++ b/Sandbox/Sandbox/Views/Home/ResinBalls.cshtml
@@ -10,10 +10,10 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">Resin Balls</span></p>
+                                <p class="font5"><span class="color-bg black ">Resin Balls - what do you see?</span></p>
                                 <h2 class="black add-top-quarter"><span>Resin Balls</span></h2>
                                 <h5 class="font3 black">2005, 2010</h5>
-                                <h4 class="font5 dark">Resin Balls</h4>
+                                <h4 class="font5 dark">Resin and Metal</h4>
                             </div>
                         </div>
                     </article>
@@ -28,30 +28,47 @@
 
                 </div>
 
-                <div class="row showcase-thumb-strip zoom">
+                <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - B.S. 1.236 Silver, Resin" title="B.S. 1.236 Silver, Resin" class="img-responsive custom-overlay-6" src="~/images/resinballs/resinballs-01.jpg" />
+                        <img alt="Natalie Macellaio - B.S. 1.236 Silver, Resin" class="img-responsive" src="~/images/resinballs/resinballs-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">B.S. 1.236 Silver, Resin</h3>
+                        </div>
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - B.S. 1.236l detail" title="B.S. 1.236 detail" class="img-responsive custom-overlay-6" src="~/images/resinballs/resinballs-02.jpg" />
-                    </article>
-                </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - B.S. 1.236 full" title="B.S. 1.236 full" class="img-responsive custom-overlay-6" src="~/images/resinballs/resinballs-03.jpg" />
-                    </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Swarm Revisited - side" title="Swarm Revisited - side" class=" img-responsive custom-overlay-6" src="~/images/resinballs/resinballs-04.jpg" />
+                        <img alt="Natalie Macellaio - B.S. 1.236l detail" class="img-responsive" src="~/images/resinballs/resinballs-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">B.S. 1.236 detail</h3>
+                        </div>
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip zoom">
+                <div class="row showcase-thumb-strip">
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Swarm Revisited - detail" title="Swarm Revisited - detail" class="img-responsive custom-overlay" src="~/images/resinballs/resinballs-06.jpg" />
+                        <img alt="Natalie Macellaio - B.S. 1.236 full" class="img-responsive" src="~/images/resinballs/resinballs-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">B.S. 1.236 full</h3>
+                        </div>
                     </article>
                     <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Swarm Revisited - full" title="Swarm Revisited - full" class="img-responsive custom-overlay-6" src="~/images/resinballs/resinballs-07.jpg" />
+                        <img alt="Natalie Macellaio - Swarm Revisited - side" class=" img-responsive" src="~/images/resinballs/resinballs-04.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Swarm Revisited - side</h3>
+                        </div>
                     </article>
-
+                </div>
+                <div class="row showcase-thumb-strip">
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Swarm Revisited - detail" class="img-responsive" src="~/images/resinballs/resinballs-06.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Swarm Revisited - detail</h3>
+                        </div>
+                    </article>
+                    <article class="col-md-6">
+                        <img alt="Natalie Macellaio - Swarm Revisited - full" class="img-responsive" src="~/images/resinballs/resinballs-07.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Swarm Revisited - full</h3>
+                        </div>
+                    </article>
                 </div>
             </article>
         </div>
