--- a/Sandbox/Sandbox/Views/Shared/_InternalPageLayout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_InternalPageLayout.cshtml
@@ -4,20 +4,20 @@
     <title>@ViewBag.Title</title>
     <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="~/fonts/fonts.css" rel="stylesheet">
-   <link href="~/stylesheets/pace.preload.css" rel="stylesheet">
+ <!--  <link href="~/stylesheets/pace.preload.css" rel="stylesheet">
     <link href="~/stylesheets/slimmenu.css" rel="stylesheet" type="text" />
     <link href="~/stylesheets/venobox.css" rel="stylesheet" type="text" />
     <link href="~/stylesheets/jquery.tweet.css" rel="stylesheet" type="text" />
-    <!-- <link href="~/stylesheets/navmenu.css" rel="stylesheet" type="text" />-->
+     <link href="~/stylesheets/navmenu.css" rel="stylesheet" type="text" />-->
     <link href="~/stylesheets/jquery.bxslider.css" rel="stylesheet" type="text" />
-    <link href="~/stylesheets/isotope.css" rel="stylesheet" type="text" />
-    <!--  <link href="~/stylesheets/intro02.css" rel="stylesheet" type="text" />-->
+ <!--   <link href="~/stylesheets/isotope.css" rel="stylesheet" type="text" />
+     <link href="~/stylesheets/intro02.css" rel="stylesheet" type="text" />-->
     <link href="~/stylesheets/main.css" rel="stylesheet" type="text" />
     <link href="~/stylesheets/main-responsive.css" rel="stylesheet" type="text" />
     <link href="~/stylesheets/main-retina.css" rel="stylesheet" type="text" />
     <link rel="~/stylesheet/less" type="text/css" href="less/color.less" />
     <link rel="~/stylesheet/less" type="text/css" href="less/fonts.less" />
-    <script src="~/less/less-2.0.0.min.js"></script>
+    <script type="text/javascript" src="~/less/less-2.0.0.min.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,900%7COpen+Sans:400,300,700,800%7CMontserrat:400,700%7CCrimson+Text:400,700,400italic,700italic%7CLekton:400,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
@@ -27,7 +27,7 @@
     <script src="~/javascripts/libs/jquery.min.js" type="text/javascript"></script>
     <script src="~/javascripts/libs/jquery.easing.1.3.js" type="text/javascript"></script>
     <script src="~/bootstrap/js/bootstrap.js" type="text/javascript"></script>
-    <script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script><!-- see if needed-->
+   <!--  <script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script>see if needed-->
 
     <script src="~/javascripts/libs/retina.js" type="text/javascript"></script>
     <script src="~/javascripts/libs/device.min.js" type="text/javascript"></script>
