--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
         <link rel="apple-touch-icon" sizes="144x144" href="~/assets/touchicons/apple-touch-icon-144-precomposed" />
         <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet">
         <link href="~/fonts/fonts.css" rel="stylesheet">
-        <link href="~/stylesheets/pace.preload.css" rel="stylesheet">
+       <!-- <link href="~/stylesheets/pace.preload.css" rel="stylesheet">-->
         <link href="~/stylesheets/slimmenu.css" rel="stylesheet" type="text" />
         <link href="~/stylesheets/venobox.css" rel="stylesheet" type="text" />
         <link href="~/stylesheets/jquery.tweet.css" rel="stylesheet" type="text" />
@@ -40,8 +40,8 @@
     </head>
     <body class=" whitegray-bg">
         <div class="sticky-panel sticky-panel-top white-bg"></div>
-        <div class="sticky-panel sticky-panel-right white-bg"></div>
-        <div class="sticky-panel sticky-panel-bottom white-bg"></div>
+      <!--  <div class="sticky-panel sticky-panel-right white-bg"></div>
+        <div class="sticky-panel sticky-panel-bottom white-bg"></div>-->
         <header class="masthead visible-lg white-bg">
             <div class="main-logo-wrap">
                 <a href="~/Index"> <img alt="Natalie Macellaio - Metal Artist, logo" title="Natalie Macellaio - Metal Artist, logo" src="~/images/logo.png" /></a>
@@ -147,13 +147,12 @@
             </footer>
         </div>
 
-            <!-- @Scripts.Render("~/bundles/jquery")
-        @RenderSection("scripts", required: false)-->
-
-        <script src="~/javascripts/libs/jquery.min.js" type="text/javascript"></script>
+        <!--check to see if extra jquery needed-->
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+            <script src="~/javascripts/libs/jquery.min.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/jquery.easing.1.3.js" type="text/javascript"></script>
         <script src="~/bootstrap/js/bootstrap.js" type="text/javascript"></script>
-        <script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script>
+     <!--   <script src="~/javascripts/libs/pace.preload.min.js" type="text/javascript"></script>-->
 
         <script src="~/javascripts/libs/retina.js" type="text/javascript"></script>
         <script src="~/javascripts/libs/device.min.js" type="text/javascript"></script>
