--- a/Sandbox/Sandbox/stylesheets/main.css
+++ b/Sandbox/Sandbox/stylesheets/main.css
@@ -1,4 +1,3 @@
-body{overflow-x: hidden; }
 body{font-weight:300;
 	overflow-x:hidden !important; 
 }
@@ -10,16 +9,12 @@ a:focus { outline: none;
 }
 .ease{
 	-webkit-transition: all .4s ease-in-out;
-	   -moz-transition: all .4s ease-in-out;
 		-ms-transition: all .4s ease-in-out;
-		 -o-transition: all .4s ease-in-out;
 			transition: all .4s ease-in-out;
 }
 .ease:hover{
 	-webkit-transition: all .4s ease-in-out;
-	   -moz-transition: all .4s ease-in-out;
 		-ms-transition: all .4s ease-in-out;
-		 -o-transition: all .4s ease-in-out;
 			transition: all .4s ease-in-out;
 }
 .text-center > .img-responsive{
@@ -43,7 +38,7 @@ h1,h2,h3,h4,h5,h6{
 	}
 }
 .page-section{
-	padding: 30px 0;
+	padding:  0;
 }
 .separator-section{
 	padding: 100px 0;
@@ -144,25 +139,19 @@ h1,h2,h3,h4,h5,h6{
     background-color: rgba(243, 243, 243, 0.9);
 	background-size: cover;
 	-webkit-transition: all 1.2s ease-in-out;
-	   -moz-transition: all 1.2s ease-in-out;
 		-ms-transition: all 1.2s ease-in-out;
-		 -o-transition: all 1.2s ease-in-out;
 			transition: all 1.2s ease-in-out;
 }
 .masthead.revealed{
 	left: 0px;
 	-webkit-transition: all 0.5s ease-in-out;
-	   -moz-transition: all 0.5s ease-in-out;
 		-ms-transition: all 0.5s ease-in-out;
-		 -o-transition: all 0.5s ease-in-out;
 			transition: all 0.5s ease-in-out;
 }
 .masthead.revealed .main-logo-wrap{
 	top: -150px;
 	-webkit-transition: all 1.5s ease-in-out;
-	   -moz-transition: all 1.5s ease-in-out;
 		-ms-transition: all 1.5s ease-in-out;
-		 -o-transition: all 1.5s ease-in-out;
 			transition: all 1.5s ease-in-out;
 }
 .main-logo-wrap{
@@ -170,9 +159,7 @@ h1,h2,h3,h4,h5,h6{
 	right: 15px;
 	top: 20px;
 	-webkit-transition: all 1.5s ease-in-out;
-	   -moz-transition: all 1.5s ease-in-out;
 		-ms-transition: all 1.5s ease-in-out;
-		 -o-transition: all 1.5s ease-in-out;
 			transition: all 1.5s ease-in-out;
 }
 .side-logo{
@@ -219,16 +206,12 @@ h1,h2,h3,h4,h5,h6{
      text-decoration: none;
      text-transform: uppercase;
     -webkit-transition: all .8s linear;
-       -moz-transition: all .8s linear;
         -ms-transition: all .8s linear;
-         -o-transition: all .8s linear;
             transition: all .8s linear;
 }
 .main-nav-menu li a.main-nav-link:hover{
     -webkit-transition: all .8s linear;
-       -moz-transition: all .8s linear;
         -ms-transition: all .8s linear;
-         -o-transition: all .8s linear;
             transition: all .8s linear;
 }
 .sub-nav{
@@ -243,16 +226,12 @@ h1,h2,h3,h4,h5,h6{
      letter-spacing: 0px;
      text-decoration: none;
 	-webkit-transition: all 0.5s ease-in-out;
-	   -moz-transition: all 0.5s ease-in-out;
 		-ms-transition: all 0.5s ease-in-out;
-		 -o-transition: all 0.5s ease-in-out;
 			transition: all 0.5s ease-in-out;
 }
 .sub-nav a:hover{
 	-webkit-transition: all 0.5s ease-in-out;
-	   -moz-transition: all 0.5s ease-in-out;
 		-ms-transition: all 0.5s ease-in-out;
-		 -o-transition: all 0.5s ease-in-out;
 			transition: all 0.5s ease-in-out;
 }
 .sub-nav a:after{
@@ -278,17 +257,13 @@ h1,h2,h3,h4,h5,h6{
     width: 36px;
     opacity: 0.2;
     -webkit-transition: all .4s ease-in-out;
-       -moz-transition: all .4s ease-in-out;
         -ms-transition: all .4s ease-in-out;
-         -o-transition: all .4s ease-in-out;
             transition: all .4s ease-in-out;
 }
 .social-wrap li a:hover > img{
     opacity: 1;
     -webkit-transition: all .4s ease-in-out;
-       -moz-transition: all .4s ease-in-out;
         -ms-transition: all .4s ease-in-out;
-         -o-transition: all .4s ease-in-out;
             transition: all .4s ease-in-out;
 }
 .credit-text{
@@ -317,9 +292,7 @@ h1,h2,h3,h4,h5,h6{
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	-webkit-transition: all .4s ease-in-out;
-	   -moz-transition: all .4s ease-in-out;
 		-ms-transition: all .4s ease-in-out;
-		 -o-transition: all .4s ease-in-out;
 			transition: all .4s ease-in-out;
 }
 .btn-eight-big{
@@ -331,16 +304,12 @@ h1,h2,h3,h4,h5,h6{
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	-webkit-transition: all .4s ease-in-out;
-	   -moz-transition: all .4s ease-in-out;
 		-ms-transition: all .4s ease-in-out;
-		 -o-transition: all .4s ease-in-out;
 			transition: all .4s ease-in-out;
 }
 .btn-eight:hover{
 	-webkit-transition: all .4s ease-in-out;
-	   -moz-transition: all .4s ease-in-out;
 		-ms-transition: all .4s ease-in-out;
-		 -o-transition: all .4s ease-in-out;
 			transition: all .4s ease-in-out;
 }
 .btn-eight-white{
@@ -372,12 +341,6 @@ h1,h2,h3,h4,h5,h6{
 .showcase-01{
 	background-image: url('http://placehold.it/2000x1250');
 }
-.showcase-02{
-	background-image: url('http://placehold.it/2000x1250');
-}
-.showcase-03{
-	background-image: url('http://placehold.it/2000x1250');
-}
 .coverflow-bg{
 	background-image: url('http://placehold.it/2000x1250');
 }
@@ -385,18 +348,6 @@ h1,h2,h3,h4,h5,h6{
 	background-image: url('http://placehold.it/2000x1250');
 }
 .cover-02{
-	background-image: url('http://placehold.it/2000x1250');
-}
-.cover-03{
-	background-image: url('http://placehold.it/2000x1250');
-}
-.cover-04{
-	background-image: url('http://placehold.it/2000x1250');
-}
-.cover-05{
-	background-image: url('http://placehold.it/2000x1250');
-}
-.cover-06{
 	background-image: url('http://placehold.it/2000x1250');
 }
 .contact-bg{
@@ -681,7 +632,10 @@ h1,h2,h3,h4,h5,h6{
  	font-weight: 500;
      letter-spacing: 4px;
         }
- .showcase-single-item h3{ 
+ .showcase-single-item h3{
+        text-transform: uppercase;
+         letter-spacing: 4px;
+         font-size: 16px;
         }
 .showcase-single-item p > span{  
             font-size: 18px;
@@ -691,9 +645,9 @@ h1,h2,h3,h4,h5,h6{
         }
 .showcase-single-content{
 	margin-top: 60px;
-    margin-top: 60px;/*tosca*/
+    margin-top: 0px;/*tosca*/
 	margin-bottom: 60px;
-    margin-bottom: 60px;/*tosca*/
+    margin-bottom: 0px;/*tosca*/
     padding-bottom: 0px;
     padding-top: 0px;}
 .showcase-single-content h5{
@@ -716,6 +670,16 @@ h1,h2,h3,h4,h5,h6{
 	font-style: italic;
 	padding: 3px;
 }
+.showcase-single-item-inner h4 {
+     text-transform: uppercase;
+         letter-spacing: 4px;
+         font-size: 16px;
+}
+.showcase-single-item-inner h3 {
+     text-transform: uppercase;
+         letter-spacing: 4px;
+         font-size: 16px;
+}
 .showcase-thumb-strip img{
      justify-content:center;       
     -webkit-transition: all .4s ease-in-out;
@@ -724,39 +688,48 @@ h1,h2,h3,h4,h5,h6{
                  -o-transition: all .4s ease-in-out;
                     transition: all .4s ease-in-out;
 }
-.showcase-thumb-strip a {
+/*.showcase-thumb-strip a {
     -webkit-transition: all .4s ease-in-out;
                -moz-transition: all .4s ease-in-out;
                 -ms-transition: all .4s ease-in-out;
                  -o-transition: all .4s ease-in-out;
                     transition: all 0.4s ease-in-out 0s;
-}
-.showcase-thumb-strip a:hover{
-			opacity: 0.4;
+}*/
+
+/*.showcase-thumb-strip:hover{		
+    opacity: 0.4;
             cursor: url("../images/zoom.png") 40 40, crosshair;
             -webkit-transition: all .4s ease-in-out;
                -moz-transition: all .4s ease-in-out;
                 -ms-transition: all .4s ease-in-out;
                  -o-transition: all .4s ease-in-out;
                     transition: all .4s ease-in-out;
+}*/
+
+.showcase-thumb-strip-inner {
+    padding: 0 0 15px 0;
+    margin-top: -10px;
+    text-align: center;
 }
- .showcase-thumb-strip-inner{
-            text-align: center;
-        }
-        .showcase-thumb-strip-inner h3{ 
-            font-size: 14px;
+ 
+        .showcase-thumb-strip-inner h3{
+            opacity: 1; 
+            font-size: 15px;
             font-weight: 400;
-            letter-spacing: 4px;
+            letter-spacing: 2px;
             line-height: 21px;
             text-transform: uppercase;
             margin-bottom: 10px;
         }
         .showcase-thumb-strip-inner p > span{  
-            font-size: 14px;
+            opacity: 1;
+            font-size: 17px;
             font-weight: 200;
             line-height: 21px;
             padding: 7px;
         }
+
+
 .contact-bg{
 	background-repeat: no-repeat;
 	background-position: center center;
