added natalie name to index

--- a/Sandbox/Sandbox/Views/Home/Brood.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Brood.cshtml
@@ -11,7 +11,7 @@
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
                                 <p class="font5"><span class="color-bg black ">Just a post - with a brood of art</span></p>
-                                <h2 class="black add-top-quarter"><span>Brood</span></h2>
+                                <h2 class="color font1 add-top-quarter"><span>Brood</span></h2>
                                 <h5 class="font3 black">2007</h5>
                                 <h3 class="font5 color">Resin and Metal</h3>
                             </div>
