--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -79,6 +79,33 @@
                     </a>
                 </div>
                 <div class="works-item works-item-one-third zoom">
+                    <img alt="Boiling Over, resin metal" class="img-responsive" src="~/images/boilingover/boil-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/BoilingOver">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Resin and Metal</h3>
+                            <p class="white"><span class="black-bg">Boiling Over</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="Resin Crack on metal" class="img-responsive" src="~/images/crack/crack-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Crack">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Resin and Metal</h3>
+                            <p class="white"><span class="black-bg">Crack</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
+                    <img alt="Roach Study on Metal" class="img-responsive" src="~/images/roachstudy/roach-01.jpg" />
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Roach-Study">
+                        <div class="works-item-inner valign">
+                            <h3 class="black">Resin and Metal</h3>
+                            <p class="white"><span class="black-bg">Roach Study</span></p>
+                        </div>
+                    </a>
+                </div>
+                <div class="works-item works-item-one-third zoom">
                     <img alt="resin brood on post" class="img-responsive" src="~/images/brood/brood-01.jpg" />
                     <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Brood">
                         <div class="works-item-inner valign">
@@ -93,18 +120,6 @@
                         <div class="works-item-inner valign">
                             <h3 class="black">New Work</h3>
                             <p class="white"><span class="black-bg">Toddler Scribbles</span></p>
-                        </div>
-                    </a>
-                </div>
-
-
-                <!-----sample-->
-                <div class="works-item works-item-one-third zoom">
-                    <img alt="Collaborations" title="The Motherload Project" class="img-responsive" src="~/images/motherload/motherload-02.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" data-slide-index="#motherload" href="~/The-Mother-Load-Project">
-                        <div class="works-item-inner valign">
-                            <h3 class="black">Collaborations</h3>
-                            <p class="white"><span class="black-bg">The Motherload Project</span></p>
                         </div>
                     </a>
                 </div>
