--- a/Sandbox/Sandbox/Views/Home/BolingOver.cshtml
+++ b/Sandbox/Sandbox/Views/Home/BolingOver.cshtml
@@ -10,10 +10,10 @@
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">Boiling Over</span></p>
-                                <h2 class="black add-top-quarter"><span>boiling over</span></h2>
-                                <h5 class="font3 black">2014</h5>
-                                <h4 class="font5 dark">boiling over</h4>
+                                <p class="font5"><span class="color-bg black ">Resin Revenge Boiling Over</span></p>
+                                <h2 class="color font1 add-top-quarter"><span>Boiling Over</span></h2>
+                                <h5 class="font3 black">2007</h5>
+                                <h3 class="font5 color">Resin and Metal</h3>
                             </div>
                         </div>
                     </article>
@@ -25,29 +25,27 @@
                             </div>
                         </div>
                     </article>
-
                 </div>
-
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring" title="Fina's Ring" class="img-responsive custom-overlay-6 " src="images/kidsrings/kring-01.jpg" />
+                <div class="row">
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Boiling Over, nickel, resin 12x12" class="img-responsive" src="~/images/boilingover/boil-01.jpg" /> 
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Boiling Over, nickel, resin 12x12</h3>
+                        </div>
                     </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring Detail" title="Fina's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-02.jpg" />
-                    </article>
-                </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring" title="Milo's Ring" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-03.jpg" />
-                    </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring Detail" title="Milo's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-04.jpg" />
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Boiling Over, nickel, resin 12x12" class="img-responsive" src="~/images/boilingover/boil-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Boiling Over, detail 1</h3>
+                        </div>
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-12 col-md-push-1 zoom">
-                        <img alt="Natalie Macellaio - Balloon Ring" title="Balloon Ring" class="img-responsive custom-overlay" src="images/kidsrings/kring-05.jpg" />
-
+                <div class="row">
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Boiling Over, nickel, resin 12x12" class="img-responsive" src="~/images/boilingover/boil-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Boiling Over, detail 2</h3>
+                        </div>
                     </article>
                 </div>
             </article>
