--- a/Sandbox/Sandbox/Views/Home/Brood.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Brood.cshtml
@@ -30,21 +30,21 @@
                         <article class="col-md-6 showcase-thumb-strip">
                                 <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive" src="images/brood/brood-01.jpg" />
                                 <div class="showcase-thumb-strip-inner">
-                                    <h3 class="black">Brood  silver, resin</h3>
+                                    <h3 class="black">Brood,  silver resin</h3>
                                 </div>
                    </article>
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive custom-overlay-6" src="images/brood/brood-02.jpg" />
+                        <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive" src="images/brood/brood-02.jpg" />
                         <div class="showcase-thumb-strip-inner">
-                            <h3 class="black">Brood silver, resin, detail</h3>
+                            <h3 class="black">Brood, silver resin, detail</h3>
                         </div>
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip ">
+                <div class="row">
                     <article class="col-md-6 showcase-thumb-strip">
-                        <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive custom-overlay-6" src="images/brood/brood-03.jpg" />
+                        <img alt="Natalie Macellaio - Brood-silver, resin" class="img-responsive" src="images/brood/brood-03.jpg" />
                         <div class="showcase-thumb-strip-inner">
-                            <h3 class="black">Brood silver, resin, detail2</h3>
+                            <h3 class="black">Brood, silver resin, detail 2</h3>
                         </div>
                     </article>
                 </div>
