--- a/Sandbox/Sandbox/Views/Home/RoachStudy.cshtml
+++ b/Sandbox/Sandbox/Views/Home/RoachStudy.cshtml
@@ -11,9 +11,9 @@
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
                                 <p class="font5"><span class="color-bg black ">Roach Study</span></p>
-                                <h2 class="black add-top-quarter"><span>Roach Study</span></h2>
-                                <h5 class="font3 black">2014</h5>
-                                <h4 class="font5 dark">Roach Study</h4>
+                                <h2 class="color font1 add-top-quarter"><span>Roach Study</span></h2>
+                                <h5 class="font3 black">2008</h5>
+                                <h3 class="font5 color">Resin and Metal</h3>
                             </div>
                         </div>
                     </article>
@@ -25,29 +25,27 @@
                             </div>
                         </div>
                     </article>
-
                 </div>
-
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring" title="Fina's Ring" class="img-responsive custom-overlay-6 " src="images/kidsrings/kring-01.jpg" />
+                <div class="row ">
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Roach Study, metal resin" class="img-responsive" src="images/roachstudy/roach-01.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Roach Study, metal resin</h3>
+                        </div>
                     </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring Detail" title="Fina's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-02.jpg" />
-                    </article>
-                </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring" title="Milo's Ring" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-03.jpg" />
-                    </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring Detail" title="Milo's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-04.jpg" />
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Roach Study, metal resin detail" class="img-responsive" src="images/roachstudy/roach-02.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Roach Study, metal resin detail</h3>
+                        </div>
                     </article>
                 </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-12 col-md-push-1 zoom">
-                        <img alt="Natalie Macellaio - Balloon Ring" title="Balloon Ring" class="img-responsive custom-overlay" src="images/kidsrings/kring-05.jpg" />
-
+                <div class="row">
+                    <article class="col-md-6 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Roach Study, metal resin detail2" class="img-responsive" src="images/roachstudy/roach-03.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Roach Study, metal resin detail2</h3>
+                        </div>
                     </article>
                 </div>
             </article>
