add index links

--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -254,10 +254,11 @@
 
             <article class="col-md-6 contact-content-split fullheight text-center common-pad white-bg">
                 <div class="valign">
-                    <h1 class="black font5 promo-caps">Natalie Macellaio<br /><span class="color-bg black"><a href="#">nataliemacellaio.artist@gmail.com</a></span></h1>
+                    <h1 class="black font5 promo-caps">Natalie Macellaio</h1>
+                    <h3><span class="color-bg black"><a href="#">nataliemacellaio.artist@gmail.com</a></span></h3>
                     <!-- social icons-->
                     <ul class="social-wrap">
-                        <li><a href="#"><img alt="" title="" src="images/social/01.png" /></a></li>
+                        <li><a href="#"><img alt="" title="" src="" /></a></li>
 
                     </ul>
                 </div>
