--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -69,6 +69,14 @@
                             <div class="sub-nav">
                                 <a href="~/Scribbles">Scribbles</a>
                                 <a href="~/Kids-Rings">Kids-Rings</a>
+                                <a href="~/Piercing-Pieces">Piercing-Pieces</a>
+                                <a href="~/Resin-Balls">Resin-Balls</a>
+                                <a href="~/Bump">Bump</a>
+                                <a href="~/Bulge">Bulge</a>
+                                <a href="~/Brood">Brood</a>
+                                <a href="~/Boiling-Over">Boiling-Over</a>
+                                <a href="~/Crack">Crack</a>
+                                <a href="~/Roach-Study">Roach-Study</a>
                             </div>
                         </li>
                         <li class="trigger-sub-nav">
@@ -82,10 +90,10 @@
                             </div>
                         </li>
                         <li class="trigger-sub-nav">
-                            <a class="main-nav-link" href="">about</a>
+                            <a class="main-nav-link" href="#">about</a>
                             <div class="sub-nav">
-                                <a href="#about">my bio</a>
-                                <a href="#contact">contact me</a>
+                                <a href="~/Index/#about">my bio</a>
+                                <a href="~/Index/#contact">contact me</a>
                             </div>
                         </li>
                     </ul>
