change boilling-over link

--- a/Sandbox/Sandbox/Views/Home/Bump.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Bump.cshtml
@@ -2,7 +2,12 @@
     ViewBag.Title = "Natalie Macellaio | Bump";
 }
 <section class="page-section" id="bump">
-    <div class="container">
+    <div class="sticky-panel sticky-panel-top white-bg">
+        <div class="main-logo-wrap" style="z-index:200">
+            <a href="~/Index"> <img alt="Natalie Macellaio - Metal Artist, logo" title="home page" src="~/images/bxslider/prev.png" /></a>
+        </div>
+    </div>
+     <div class="container">
         <div class="row">
             <article class="col-md-12 showcase-single-content white-bg">
                 <div class="row">
