--- a/Sandbox/Sandbox/Views/Home/Index.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
                 </div>
                 <div class="works-item works-item-one-third zoom">
                     <img alt="New Work - Pump" class="img-responsive" src="~/images/newwork/pump.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" title="Pump" href="~/images/newwork/pump.jpg">
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/New-work">
                         <div class="works-item-inner valign">
                             <h3 class="black">New Work</h3>
                             <p class="white"><span class="black-bg">Pump</span></p>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="works-item works-item-one-third zoom">
                     <img alt="Boiling Over, resin metal" class="img-responsive" src="~/images/boilingover/boil-01.jpg" />
-                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/BoilingOver">
+                    <a class="venobox" data-gall="portfolio-gallery" data-css="custom-overlay" data-type="iframe" href="~/Boiling-Over">
                         <div class="works-item-inner valign">
                             <h3 class="black">Resin and Metal</h3>
                             <p class="white"><span class="black-bg">Boiling Over</span></p>
