--- a/Sandbox/Sandbox/Views/Home/NewWork.cshtml
+++ b/Sandbox/Sandbox/Views/Home/NewWork.cshtml
@@ -3,17 +3,22 @@
 }
 
 <section class="page-section" id="newwork">
-    <div class="container">
+    <div class="sticky-panel sticky-panel-top white-bg">
+        <div class="main-logo-wrap" style="z-index:200">
+            <a href="~/Index"> <img alt="Natalie Macellaio - Metal Artist, logo" title="home page" src="~/images/bxslider/prev.png" /></a>
+        </div>
+    </div>
+     <div class="container">
         <div class="row">
             <article class="col-md-12 showcase-single-content white-bg">
                 <div class="row">
                     <article class="col-md-8 text-left showcase-single-item-wrap white-bg">
                         <div class="showcase-single-item">
                             <div class="showcase-single-item-inner text-left">
-                                <p class="font5"><span class="color-bg black ">New Work</span></p>
+                                <p class="font5"><span class="color-bg black ">Tell me about the pump!</span></p>
                                 <h2 class="black add-top-quarter"><span>Pump</span></h2>
-                                <h5 class="font3 black">2014</h5>
-                                <h4 class="font5 dark">Pump</h4>
+                                <h5 class="font3 black">2015</h5>
+                                <h4 class="font5 dark">New Work</h4>
                             </div>
                         </div>
                     </article>
@@ -25,31 +30,15 @@
                             </div>
                         </div>
                     </article>
-
                 </div>
-
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring" title="Fina's Ring" class="img-responsive custom-overlay-6 " src="images/kidsrings/kring-01.jpg" />
+                <div class="row">                   
+                    <article class="col-md-6 col-md-push-2 showcase-thumb-strip">
+                        <img alt="Natalie Macellaio - Pump" title="Pump" class="img-responsive " src="images/newwork/pump.jpg" />
+                        <div class="showcase-thumb-strip-inner">
+                            <h3 class="black">Pump</h3>
+                        </div>
                     </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Fina's Ring Detail" title="Fina's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-02.jpg" />
-                    </article>
-                </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring" title="Milo's Ring" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-03.jpg" />
-                    </article>
-                    <article class="col-md-6">
-                        <img alt="Natalie Macellaio - Milo's Ring Detail" title="Milo's Ring Detail" class="img-responsive custom-overlay-6" src="images/kidsrings/kring-04.jpg" />
-                    </article>
-                </div>
-                <div class="row showcase-thumb-strip zoom">
-                    <article class="col-md-12 col-md-push-1 zoom">
-                        <img alt="Natalie Macellaio - Balloon Ring" title="Balloon Ring" class="img-responsive custom-overlay" src="images/kidsrings/kring-05.jpg" />
-
-                    </article>
-                </div>
+                   </div>
             </article>
         </div>
     </div>
