--- a/Sandbox/Sandbox/Views/Home/Bulge.cshtml
+++ b/Sandbox/Sandbox/Views/Home/Bulge.cshtml
@@ -2,6 +2,11 @@
     ViewBag.Title = "Natalie Macellaio | Bulge";
 }
 <section class="page-section" id="bluge">
+    <div class="sticky-panel sticky-panel-top white-bg">
+        <div class="main-logo-wrap" style="z-index:200">
+            <a href="~/Index"> <img alt="Natalie Macellaio - Metal Artist, logo" title="home page" src="~/images/bxslider/prev.png" /></a>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
             <article class="col-md-12 showcase-single-content white-bg">
