--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
         <link rel="~/stylesheet/less" type="text/css" href="less/color.less" />
         <link rel="~/stylesheet/less" type="text/css" href="less/fonts.less" />
         <script src="~/less/less-2.0.0.min.js" type="text/javascript"></script>
-        <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,900%7COpen+Sans:400,300,700,800%7CMontserrat:400,700%7CCrimson+Text:400,700,400italic,700italic%7CLekton:400,700' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700,900%7COpen+Sans:400,300,700,800' rel='stylesheet' type='text/css'>
        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
       <script src="bootstrap/js/html5shiv.js"></script>
@@ -118,6 +118,15 @@
                     <ul>
                         <li><a class="font2 black ease" href="~/Scribbles">Scribbles</a></li>
                         <li><a class="font2 black ease" href="~/Kids-Rings">Kids Rings</a></li>
+                        <li><a class="font2 black ease" href="~/Piercing-Pieces">Piercing-Pieces</a></li>
+                        <li><a class="font2 black ease" href="~/Resin-Balls">Resin-Balls</a></li>
+                        <li><a class="font2 black ease" href="~/Bump">Bump</a></li>
+                        <li><a class="font2 black ease" href="~/Bulge">Bulge</a></li>
+                        <li><a class="font2 black ease" href="~/Brood">Brood</a></li> 
+                        <li><a class="font2 black ease" href="~/Boiling-Over">Boiling-Over</a></li>
+                        <li><a class="font2 black ease" href="~/Crack">Crack</a></li>
+                        <li><a class="font2 black ease" href="~/Roach-Study">Roach-Study</a></li>
+                          
                     </ul>
                 </li>
                 <li>
