--- a/Sandbox/Sandbox/stylesheets/slimmenu.css
+++ b/Sandbox/Sandbox/stylesheets/slimmenu.css
@@ -14,7 +14,7 @@
     width: 100%;
     height: 48px;
     line-height: 48px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open+Sans','Montserrat', sans-serif;
     font-size: 14px;
     font-weight: 700;
     text-transform: uppercase;
@@ -76,9 +76,9 @@ ul.slimmenu > li:first-child { border-left: 0 }
 ul.slimmenu > li:last-child { margin-right: 0 }
 ul.slimmenu li a {
     display: block;
-    color: #8393ca;
+    color: #61559F;
     padding: 12px 64px 12px 16px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open+Sans','Montserrat', sans-serif;
     font-size: 10px;
     line-height: 17px;
     font-weight: 200;
