closing tags to <link>

--- a/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
+++ b/Sandbox/Sandbox/Views/Shared/_Layout.cshtml
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>@ViewBag.Title</title>     
+        <title>@ViewBag.Title</title> 
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta content='all' name='robots' />
@@ -10,13 +10,13 @@
         <meta name="author" content="tosca ragnini" />
         <!-- if you are going to support IE -->
         <!--[if IE]> <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'> <![endif]-->
-        <link rel="shortcut icon" href="~/images/favicon/favicon.ico">
+        <link rel="shortcut icon" href="~/images/favicon/favicon.ico" />
         <link rel="apple-touch-icon" sizes="57x57" href="~/images/touchicons/apple-touch-icon-57-precomposed" />
         <link rel="apple-touch-icon" sizes="114x114" href="~/assets/touchicons/apple-touch-icon-114-precomposed" />
         <link rel="apple-touch-icon" sizes="72x72" href="~/assets/touchicons/apple-touch-icon-72-precomposed" />
         <link rel="apple-touch-icon" sizes="144x144" href="~/assets/touchicons/apple-touch-icon-144-precomposed" />
-        <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet">
-        <link href="~/fonts/fonts.css" rel="stylesheet">
+        <link href="~/bootstrap/css/bootstrap.css" rel="stylesheet" />
+        <link href="~/fonts/fonts.css" rel="stylesheet" />
        <!-- <link href="~/stylesheets/pace.preload.css" rel="stylesheet">-->
         <link href="~/stylesheets/slimmenu.css" rel="stylesheet" type="text" />
         <link href="~/stylesheets/venobox.css" rel="stylesheet" type="text" />
